--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -35,3 +35,4 @@ chardict <- chardict.pl
 discard_esc_eol <- discard_esc_eol.pl
 dos2utf8 <- dos2utf8.sh
 oneline-alive <- oneline-alive.sh
+unbuffered <- unbuffered.sh
