each-line-stdin, ansi2utf8

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -33,6 +33,8 @@ show-wsp <- pipe-helper.sh
 
 chardict <- chardict.pl
 discard_esc_eol <- discard_esc_eol.pl
+ansi2utf8 <- ansi2utf8.sh
 dos2utf8 <- dos2utf8.sh
+each-line-stdin <- each-line-stdin.sh
 oneline-alive <- oneline-alive.sh
 unbuffered <- unbuffered.sh
