--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -38,3 +38,4 @@ dos2utf8 <- dos2utf8.sh
 each-line-stdin <- each-line-stdin.sh
 oneline-alive <- oneline-alive.sh
 unbuffered <- unbuffered.sh
+urlobfuscate_od <- urlobfuscate_od.sh
