--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -38,5 +38,6 @@ dos2utf8 <- dos2utf8.sh
 each-line-stdin <- each-line-stdin.sh
 hexdiff <- hexdiff.sh
 oneline-alive <- oneline-alive.sh
+rev-domain <- rev-domain.sh
 unbuffered <- unbuffered.sh
 urlobfuscate_od <- urlobfuscate_od.sh
