ensure-final-newline

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -36,6 +36,7 @@ discard_esc_eol <- discard_esc_eol.pl
 ansi2utf8 <- ansi2utf8.sh
 dos2utf8 <- dos2utf8.sh
 each-line-stdin <- each-line-stdin.sh
+ensure-final-newline <- ensure-final-newline.sh
 hexdiff <- hexdiff.sh
 oneline-alive <- oneline-alive.sh
 rev-domain <- rev-domain.sh
