--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -13,6 +13,7 @@ ints-to-hex-uc <- text-transforms.pl
 json-str-quote <- text-transforms.pl
 json-str-unquote <- text-transforms.pl
 preg_quote <- text-transforms.pl
+rev-domain <- text-transforms.pl
 shell-quote <- text-transforms.pl
 skip-parenth <- text-transforms.pl
 str2id <- text-transforms.pl
@@ -39,6 +40,5 @@ each-line-stdin <- each-line-stdin.sh
 ensure-final-newline <- ensure-final-newline.sh
 hexdiff <- hexdiff.sh
 oneline-alive <- oneline-alive.sh
-rev-domain <- rev-domain.sh
 unbuffered <- unbuffered.sh
 urlobfuscate_od <- urlobfuscate_od.sh
