datefmt-any2ymd

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -32,9 +32,10 @@ pipe-noeol <- pipe-helper.sh
 pipe-nl2sp <- pipe-helper.sh
 show-wsp <- pipe-helper.sh
 
-chardict <- chardict.pl
-discard_esc_eol <- discard_esc_eol.pl
 ansi2utf8 <- ansi2utf8.sh
+chardict <- chardict.pl
+datefmt-any2ymd <- datefmt-any2ymd.sed
+discard_esc_eol <- discard_esc_eol.pl
 dos2utf8 <- dos2utf8.sh
 each-line-stdin <- each-line-stdin.sh
 ensure-final-newline <- ensure-final-newline.sh
