indentation-tabs-to-2space

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -40,6 +40,7 @@ dos2utf8 <- dos2utf8.sh
 each-line-stdin <- each-line-stdin.sh
 ensure-final-newline <- ensure-final-newline.sh
 hexdiff <- hexdiff.sh
+indentation-tabs-to-2space <- indentation-tabs-to-2space.sed
 oneline-alive <- oneline-alive.sh
 unbuffered <- unbuffered.sh
 urlobfuscate_od <- urlobfuscate_od.sh
