strip-color-codes

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -42,5 +42,6 @@ ensure-final-newline <- ensure-final-newline.sh
 hexdiff <- hexdiff.sh
 indentation-tabs-to-2space <- indentation-tabs-to-2space.sed
 oneline-alive <- oneline-alive.sh
+strip-color-codes <- strip-color-codes.sed
 unbuffered <- unbuffered.sh
 urlobfuscate_od <- urlobfuscate_od.sh
