Simplify binlinks syntax

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -32,16 +32,16 @@ pipe-noeol <- pipe-helper.sh
 pipe-nl2sp <- pipe-helper.sh
 show-wsp <- pipe-helper.sh
 
-ansi2utf8 <- ansi2utf8.sh
-chardict <- chardict.pl
-datefmt-any2ymd <- datefmt-any2ymd.sed
-discard_esc_eol <- discard_esc_eol.pl
-dos2utf8 <- dos2utf8.sh
-each-line-stdin <- each-line-stdin.sh
-ensure-final-newline <- ensure-final-newline.sh
-hexdiff <- hexdiff.sh
-indentation-tabs-to-2space <- indentation-tabs-to-2space.sed
-oneline-alive <- oneline-alive.sh
-strip-color-codes <- strip-color-codes.sed
-unbuffered <- unbuffered.sh
-urlobfuscate_od <- urlobfuscate_od.sh
+ansi2utf8 <- .sh
+chardict <- .pl
+datefmt-any2ymd <- .sed
+discard_esc_eol <- .pl
+dos2utf8 <- .sh
+each-line-stdin <- .sh
+ensure-final-newline <- .sh
+hexdiff <- .sh
+indentation-tabs-to-2space <- .sed
+oneline-alive <- .sh
+strip-color-codes <- .sed
+unbuffered <- .sh
+urlobfuscate_od <- .sh
