--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -43,5 +43,6 @@ hexdiff <- .sh
 indentation-tabs-to-2space <- .sed
 oneline-alive <- .sh
 strip-color-codes <- .sed
+strip-nonascii <- .sh
 unbuffered <- .sh
 urlobfuscate_od <- .sh
