--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -27,9 +27,10 @@ urlencode <- text-transforms.pl
 urlobfuscate <- text-transforms.pl
 urlpathencode <- text-transforms.pl
 
-pipe-nonl <- pipe-helper.sh
-pipe-noeol <- pipe-helper.sh
 pipe-nl2sp <- pipe-helper.sh
+pipe-noeol <- pipe-helper.sh
+pipe-nonl <- pipe-helper.sh
+pipe-rot13 <- pipe-helper.sh
 show-wsp <- pipe-helper.sh
 
 ansi2utf8 <- .sh
