--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -15,7 +15,7 @@ json-str-unquote <- text-transforms.pl
 preg_quote <- text-transforms.pl
 rev-domain <- text-transforms.pl
 shell-quote <- text-transforms.pl
-skip-parenth <- text-transforms.pl
+skip-text-in-parens <- text-transforms.pl
 str2id <- text-transforms.pl
 str2id-camel <- text-transforms.pl
 str2id-dash <- text-transforms.pl
