--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -43,6 +43,7 @@ ensure-final-newline <- .sh
 hexdiff <- .sh
 indentation-tabs-to-2space <- .sed
 oneline-alive <- .sh
+qrencode-utf8-inverted <- .sh
 strip-color-codes <- .sed
 strip-nonascii <- .sh
 unbuffered <- .sh
