--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -36,6 +36,7 @@ show-wsp <- pipe-helper.sh
 ansi2utf8 <- .sh
 chardict <- .pl
 datefmt-any2ymd <- .sed
+decode-mime-header-value <- .pl
 discard_esc_eol <- .pl
 dos2utf8 <- .sh
 each-line-stdin <- .sh
