pytranslit-ru-simple

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -44,6 +44,7 @@ ensure-final-newline <- .sh
 hexdiff <- .sh
 indentation-tabs-to-2space <- .sed
 oneline-alive <- .sh
+pytranslit-ru-simple <- .sed
 qrencode-utf8-inverted <- .sh
 strip-color-codes <- .sed
 strip-nonascii <- .sh
