hex-backslash-nonascii-and-c

--- a/binlinks.cfg
+++ b/binlinks.cfg
@@ -6,6 +6,7 @@
 text-transforms-pmb <- text-transforms.pl
 hex-backslash-bytes <- text-transforms.pl
 hex-backslash-nonascii <- text-transforms.pl
+hex-backslash-nonascii-and-c <- text-transforms.pl
 hex-byte-decode <- text-transforms.pl
 ints-to-hex-0x <- text-transforms.pl
 ints-to-hex-lc <- text-transforms.pl
